<resources>
    <string name="app_name_formal">Andre_Luong_MyRuns5</string>
    <string name="app_name">MyRuns</string>
    <string name="profilePhotoLabel">Profile photo:</string>
    <string name="change">Change</string>
    <string name="nameLabel">Name:</string>
    <string name="nameHint">Your name here</string>
    <string name="emailLabel">Email:</string>
    <string name="emailHint">Your email here</string>
    <string name="phoneLabel">Phone:</string>
    <string name="phoneHint">Your phone number here</string>
    <string name="genderLabel">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="classLabel">Class:</string>
    <string name="classHint">e.g. 2012</string>
    <string name="majorLabel">Major:</string>
    <string name="majorHint">Your major here</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="accountLabel">Account</string>
    <string name="profileLabel">Profile</string>
    <string name="profileDescription">Name, Email, Class, etc</string>
    <string name="privacyLabel">Privacy Setting</string>
    <string name="privacyDescription">Post your records anonymously</string>
    <string name="additionalSettingsLabel">Additional Settings</string>
    <string name="unitPreferenceLabel">Unit Preference</string>
    <string name="unitPreferenceDescription">Select the units for the distance values</string>
    <string name="commentLabel">Comment</string>
    <string name="commentDescription">Any suggestions to this course</string>
    <string name="start">Start</string>
    <string name="sync">Sync</string>
    <string name="activityTypeLabel">Activity Type:</string>
    <string name="inputTypeLabel">Input Type:</string>

    <string name="settings_preference_name">SettingsPreference</string>
    <string name="privacy_key">privacy</string>
    <string name="unit_key">unit</string>
    <string name="comment_key">comment</string>

    <string name="delete_label">Delete</string>
    <string name="input_type_label">Input Type</string>
    <string name="activity_type_label">Activity Type</string>
    <string name="date_and_time_label">Date and time</string>
    <string name="duration_label">Duration</string>
    <string name="distance_label">Distance</string>
    <string name="calories_label">Calories</string>
    <string name="heart_rate_label">Heart Rate</string>

    <string-array name="input_type_array">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    
    <string-array name="activity_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
    </string-array>
</resources>