<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualEntryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/list_view_manual_entries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/list_view_manual_entries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="15dp" >

        <Button
            android:id="@+id/button_save_manual_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="55dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/save"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button_cancel_manual_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="55dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cancel"
            app:cornerRadius="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>